--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.0.0",
     "jest-expo": "~19.0.0",
+    "react-native-scripts": "1.0.0",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -20,7 +20,8 @@
   },
   "dependencies": {
     "expo": "^19.0.0",
-    "html2any": "*",
+    "he": "^1.1.1",
+    "html2any": "file:///Users/huozhi/Code/html2any",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1"
   }
