--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "dependencies": {
     "expo": "^19.0.0",
     "he": "^1.1.1",
-    "html2any": "file:///Users/huozhi/Code/html2any",
+    "html2any": "*",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1"
   }
