--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "expo": "^19.0.0",
     "he": "^1.1.1",
+    "html2any": "^0.0.1",
     "react": "16.0.0-alpha.12",
     "react-native": "^0.46.1"
   }
